--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -78,6 +78,7 @@ nav .collapse a{
 
 .paras{
     margin-top: 4px;
+    padding-right: 0;
 }
 
 .one{
@@ -89,7 +90,7 @@ nav .collapse a{
     background: #3C92CB;
     color:#fff;
     padding: 50px !important;
-    margin-top: 10px;
+    margin-top: 15px;
 
     
 }
